--- a/DEMO_PROJECT/pom.xml
+++ b/DEMO_PROJECT/pom.xml
@@ -3,4 +3,53 @@
   <groupId>DEMO_PROJECT</groupId>
   <artifactId>DEMO_PROJECT</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+   <dependencies>
+  
+  
+    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>4.30.0</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.10.2</version>
+    <scope>test</scope>
+</dependency>
+
+</dependencies>
+
+<profiles>
+
+<profile>
+
+<id>RT</id>
+
+<build>
+<plugins>
+    
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.5.3</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+    
+</plugins>
+
+</build>
+</profile>
+
+</profiles>
+
+
 </project>
